--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -12,6 +12,7 @@ config config 'config'
 config proxy 'proxy'
 	option 'transparent_proxy' '1'
 	option 'transparent_proxy_mode' 'tproxy'
+	option 'redirect_tcp' '0'
 	option 'ipv4_dns_hijack' '1'
 	option 'ipv6_dns_hijack' '1'
 	option 'ipv4_proxy' '1'
