--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -9,7 +9,7 @@ body:
       label: 自查步骤
       description: 请按以下步骤自查，如自查后问题仍然存在，再继续提交Issue。
       options:
-        - label: OpenWrt 23及以上版本的系统
+        - label: OpenWrt 22.03 及以上版本的系统
           required: true
         - label: 使用firewall4（nftables）而非firewall3（iptables）
           required: true
@@ -32,6 +32,10 @@ body:
         - label: 我使用的是由本仓库代码构建插件，而不是其他Fork
           required: true
         - label: 这确实是插件的问题，而不是核心/面板/订阅转换服务的问题
+          required: true
+        - label: 我提供了正确的、有效的、可以帮助DEBUG的信息，而不是随意填写
+          required: true
+        - label: 我提供的信息里不包含公网IP、MAC、节点信息等敏感信息
           required: true
   - type: dropdown
     id: os
@@ -111,30 +115,30 @@ body:
     id: config
     attributes:
       label: 插件配置
-      description: 附上你的插件配置
+      description: 附上你的插件配置，请贴上截图或`uci show mihomo`的输出
     validations:
       required: true
   - type: textarea
     id: profile
     attributes:
       label: 配置文件
-      description: 附上你的配置文件（敏感信息请脱敏）
+      description: 附上你的配置文件
     validations:
-      required: false
+      required: true
   - type: textarea
     id: app_log
     attributes:
       label: 插件日志
       description: 附上你的插件日志
     validations:
-      required: false
+      required: true
   - type: textarea
     id: core_log
     attributes:
       label: 核心日志
-      description: 附上你的核心日志（敏感信息请脱敏，建议填写，至少使用info级别的日志）
+      description: 附上你的核心日志，级别至少为info，建议使用debug
     validations:
-      required: false
+      required: true
   - type: textarea
     id: additional_context
     attributes:
