add keep updated config

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -6,6 +6,8 @@ config config 'config'
 	option 'scheduled_restart' '0'
 	option 'cron_expression' '0 3 * * *'
 	option 'profile' 'subscription:subscription'
+	option 'latest_profile_url' 'http://example.com/default.yaml'
+	option 'keep_updated' '1'
 	option 'mixin' '1'
 	option 'test_profile' '1'
 
