--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -85,6 +85,26 @@ define Package/mihomo/install
 	$(INSTALL_DATA) $(CURDIR)/files/mihomo.upgrade $(1)/lib/upgrade/keep.d/mihomo
 endef
 
+define Package/mihomo/postinst
+#!/bin/sh
+uci -q batch <<-EOF > /dev/null
+	del firewall.mihomo
+	set firewall.mihomo=include
+	set firewall.mihomo.type=script
+	set firewall.mihomo.path=/etc/mihomo/scripts/tun.sh
+	set firewall.mihomo.fw4_compatible=1
+	commit firewall
+EOF
+endef
+
+define Package/mihomo/postrm
+#!/bin/sh
+uci -q batch <<-EOF > /dev/null
+	del firewall.mihomo
+	commit firewall
+EOF
+endef
+
 define Build/Prepare
 	$(Build/Prepare/Default)
 	$(RM) -r $(PKG_BUILD_DIR)/rules/logic_test
