feat: split mixin option to allow more flexible configuration

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -6,7 +6,8 @@ config config 'config'
 	option 'scheduled_restart' '0'
 	option 'cron_expression' '0 3 * * *'
 	option 'profile' 'subscription:subscription'
-	option 'mixin' '1'
+	option 'mixin_config' '1'
+	option 'mixin_file' '1'
 	option 'test_profile' '1'
 
 config proxy 'proxy'
